client/src/stylesheets/components/_appbar.scss
.create-container,
.triggerButton + label {
  width: $icon-size;
  height: $icon-size;
}

.create-container {
  bottom: 30px;
}

.triggerButton + label {
  cursor: pointer;
  position: absolute;
  right: 0;
  left: 10px;
  margin: 0 auto;
  background-color: var(--primary);
  border-radius: 50%;
  z-index: 2;
  box-shadow: var(--box-shadow);
}

.triggerButton + label:before,
.triggerButton + label:after {
  position: absolute;
  content: '';
  height: calc(#{$icon-size} / 2);
  width: 0.25em;
  background-color: #fff;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  border-radius: 0.5em;
  transition: all 0.25s;
}

.triggerButton + label:before {
  height: calc(#{$icon-size} / 2);
  width: 0.25em;
}

.triggerButton + label:after {
  width: calc(#{$icon-size} / 2);
  height: 0.25em;
}

.triggerButton:checked + label:before {
  transform: rotatez(-45deg);
}

.triggerButton:checked + label:after {
  transform: rotatez(-45deg);
}

.one,
.two {
  cursor: pointer;
  position: absolute;
  padding: 1.5em;
  width: $icon-size;
  height: $icon-size;
  border-radius: 50%;
  opacity: 0;
  z-index: 1;
  transform: rotateZ(90deg);
  font-size: 1em;
  color: #fff;
  transition-property: all;
  transition-duration: 0.35s;
  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.triggerButton:checked ~ a .one,
.triggerButton:checked ~ a .two {
  opacity: 1;
}

.triggerButton:checked ~ a .one {
  background-color: purple;
  transform: translateX(-3.2em) translateY(-4em);
  transition-delay: 0.2s;
}

.triggerButton:checked ~ a .two {
  background-color: slateblue;
  transform: translateX(4.4em) translateY(-4em);
  transition-delay: 0.1s;
}

.bottom-app-bar {
  border-top: 1px solid #ffcaca;
  background: #e8e8e8;
  .app-bar-text {
    color: #212529;
    .icon {
      font-size: 1.125rem;
    }
    span {
      font-size: 0.875rem;
    }
  }
}

